# libmarkdown

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  README.zhCN.md  build_cmake.bat  build_msbuild.bat
cmake/: markdown-config.cmake.in
doc/: design.md  prompt.md
examples/: example.c  mdtools.c
include/markdown/: ast.h  document.h  error.h  export.h  extractor.h  iterator.h  markdown.h  parser.h
src/: ast.c  document.c  error.c  extractor.c  iterator.c  parser.c
tests/: sample.md  test.c
